Improve code which is used for the generation trigger